Add 128*64 OLED display to show status

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
   https://github.com/tzapu/WiFiManager.git@^2.0.16-rc.2
   https://github.com/me-no-dev/ESPAsyncWebServer.git
   knolleary/PubSubClient @ ^2.8
+  olikraus/U8g2@^2.35.9
